plugins {
    id 'java'
    id 'application'
    //id 'org.javafx.javafxplugin' version '0.0.8'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'fur.yxs.mper'
version = '1.0-SNAPSHOT'

dependencies {
    // JUnit 5 完整配置
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //implementation "org.openjfx:javafx-controls:17.0.6"
    //implementation "org.openjfx:javafx-fxml:23.0.1"
    //implementation "org.openjfx:javafx-fxml:17.0.6"
}

repositories {
    // 阿里云镜像（必须放在第一位）
    maven { url 'https://maven.aliyun.com/repository/public' }
    mavenCentral()  // 作为备用
}

test {
    useJUnitPlatform()

    // 确保测试类被正确识别
    filter {
        includeTestsMatching "*Test"
    }

    testLogging {
        events "PASSED", "SKIPPED", "FAILED"
        exceptionFormat "full"
    }
}

// 配置 Java 版本
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'fur.yxs.mper.Main'
}

javafx {
    version = "17.0.6" // 指定你使用的 JavaFX 版本，例如 17 或 21
    modules = [ 'javafx.controls', 'javafx.fxml' ] // 在此列出你需要的模块
}

run {
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}